<resources>
    <string name="app_name">Langsy</string>

    <string name="app_name_caps">langsy</string>
    <string name="motto">a modern take to the\nlanguage learning process</string>
    <string name="home_page_button">begin learning</string>

    <string name="dashboard_heading">dashboard</string>
    <string name="my_courses">my courses</string>
    <string name="add_course">add a course</string>

    <string name="course_selection_heading">course selection</string>

    <string name="visual_learning_heading">visual</string>
    <string name="application_learning_heading">application</string>
    <string name="semantic_learning_heading">semantic</string>

    <string name="assessment_learning_heading">assessment</string>
    <string name="learned_words_heading">learned words</string>

    <string name="drawing_box_label">drawing</string>
    <string name="handwrite_label">handwrite</string>
    <string name="transliteration_label">transliteration</string>
    <string name="sentence_1_label">sentence 1</string>
    <string name="sentence_2_label">sentence 2</string>
    <string name="sentence_3_label">sentence 3</string>
    <string name="definition_label">definition</string>
    <string name="translation_label">translation</string>
</resources>
