<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/application_learning_root"
    android:background="@drawable/gradient_blue_green"
    tools:context=".ApplicationLearningActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="32dp"
        android:text="@string/application_learning_heading"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:fontFamily="@font/muli"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="7 / 10"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:fontFamily="@font/muli"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:text="2 / 3"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:fontFamily="@font/muli"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/application_learning_reveal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/reveal_button"
        android:clickable="true"
        android:text="r"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="@font/muli"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/application_learning_translation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="16dp"
        android:text="здравствуйте"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        app:fontFamily="@font/muli"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/application_learning_translation">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="42dp"
                android:layout_marginRight="42dp"
                android:text="@string/transliteration_label"
                android:textColor="@android:color/white"
                app:fontFamily="@font/muli"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="42dp"
                android:layout_marginLeft="42dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="42dp"
                android:layout_marginRight="42dp"
                android:textCursorDrawable="@null"
                android:background="@drawable/edit_text"
                android:ems="10"
                app:fontFamily="@font/muli"
                android:inputType="textPersonName"
                android:selectAllOnFocus="false"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="42dp"
                android:layout_marginRight="42dp"
                android:text="@string/sentence_1_label"
                android:textColor="@android:color/white"
                app:fontFamily="@font/muli"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="42dp"
                android:layout_marginLeft="42dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="42dp"
                android:layout_marginRight="42dp"
                android:background="@drawable/edit_text"
                android:ems="10"
                app:fontFamily="@font/muli"
                android:inputType="textPersonName"
                android:selectAllOnFocus="false"
                android:singleLine="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="42dp"
                android:layout_marginRight="42dp"
                android:text="@string/sentence_2_label"
                android:textColor="@android:color/white"
                app:fontFamily="@font/muli"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="42dp"
                android:layout_marginLeft="42dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="42dp"
                android:layout_marginRight="42dp"
                android:background="@drawable/edit_text"
                android:ems="10"
                app:fontFamily="@font/muli"
                android:inputType="textPersonName"
                android:selectAllOnFocus="false"
                android:singleLine="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="42dp"
                android:layout_marginRight="42dp"
                android:text="@string/sentence_3_label"
                android:textColor="@android:color/white"
                app:fontFamily="@font/muli"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="42dp"
                android:layout_marginLeft="42dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="42dp"
                android:layout_marginRight="42dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edit_text"
                android:ems="10"
                app:fontFamily="@font/muli"
                android:inputType="textPersonName"
                android:selectAllOnFocus="false"
                android:singleLine="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView16" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1">

            <TextView
                android:id="@+id/application_learning_next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="42dp"
                android:layout_marginRight="42dp"
                android:background="@drawable/white_button_sm"
                android:clickable="true"
                android:text="next"
                android:textColor="@color/buttonText"
                android:textSize="18sp"
                app:fontFamily="@font/muli"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>