<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_pink_purple"
    tools:context=".VisualLearningActivity">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="32dp"
                android:text="@string/visual_learning_heading"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                app:fontFamily="@font/muli"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="7 / 10"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                app:fontFamily="@font/muli"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:text="1 / 3"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:fontFamily="@font/muli"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/visual_learning_reveal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/reveal_button"
                android:clickable="true"
                android:text="r"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontFamily="@font/muli"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:layout_marginLeft="42dp"
                android:layout_marginTop="32dp"
                android:text="здравствуйте"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                app:fontFamily="@font/muli"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6">

            <ga.harrysullivan.langsy.components.PaintView
                android:id="@+id/paintView2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="42dp"
                android:layout_marginLeft="42dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="42dp"
                android:layout_marginRight="42dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/paint_view"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="42dp"
                android:layout_marginRight="42dp"
                android:text="@string/drawing_box_label"
                android:textColor="@android:color/white"
                app:fontFamily="@font/muli"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="42dp"
                android:layout_marginRight="42dp"
                android:text="@string/handwrite_label"
                android:textColor="@android:color/white"
                app:fontFamily="@font/muli"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ga.harrysullivan.langsy.components.PaintView
                android:id="@+id/paintView3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="42dp"
                android:layout_marginLeft="42dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="42dp"
                android:layout_marginRight="42dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/paint_view"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>